--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/images/
+    - assets/images/
     - assets/false.wav
     - assets/success.wav
     - assets/true.wav
